[Fix] SASS :bug: :art: final alignement of h2 in nav and restaurant sections

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -557,7 +557,7 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 18px 10px 45px 19px;
+  padding: 18px 10px 45px 15.5px;
 }
 
 .nav__h2 {
@@ -740,7 +740,7 @@ ul {
 .food-section__h2 {
   -ms-flex-item-align: start;
       align-self: flex-start;
-  margin-left: 8px;
+  margin-left: 4.5px;
 }
 
 .cards-wrap {
