--- a/styles/sass/layout/_navigation.scss
+++ b/styles/sass/layout/_navigation.scss
@@ -67,7 +67,7 @@
    &__wrap {
        //border: solid black;
     @include flex-column-center;
-    padding: 18px 10px 45px 19px;
+    padding: 18px 10px 45px 15.5px;
     }
     
    &__h2 {
