--- a/styles/sass/layout/_primary_content.scss
+++ b/styles/sass/layout/_primary_content.scss
@@ -55,7 +55,7 @@
     padding: 25px 10px 35px 11px;
     &__h2{
         align-self: flex-start;
-        margin-left: 8px;
+        margin-left: 4.5px;
     }
 }
 
